--- a/docs/from_module/mod.qmd
+++ b/docs/from_module/mod.qmd
@@ -5,6 +5,11 @@ engine: julia
 # mod
     
 
+::: {.callout-note appearance="simple"}
+
+## docblock
+
+
 ```{julia}
 #| eval: false
 mod(x::Integer, r::AbstractUnitRange)
@@ -38,8 +43,17 @@ julia> mod(3, 0:2)  # mod(3, 3)
     This method requires at least Julia 1.3.
 
 
+
+:::
+    
+
  --- 
  
+::: {.callout-note appearance="simple"}
+
+## docblock
+
+
 ```{julia}
 #| eval: false
 mod(x, y)
@@ -86,8 +100,17 @@ julia> mod.(-5:5, 3)'
 ```
 
 
+
+:::
+    
+
  --- 
  
+::: {.callout-note appearance="simple"}
+
+## docblock
+
+
 ```{julia}
 #| eval: false
 rem(x::Integer, T::Type{<:Integer}) -> T
@@ -121,4 +144,8 @@ BigInt
 
 ```
 
+
+
+:::
+    
 
